@@ -4,8 +4,7 @@ BEGIN TRANSACTION;
 DROP TABLE IF EXISTS AmbientValues;
 
 CREATE TABLE AmbientValues(
-       Id INTEGER PRIMARY KEY,
-       Date TEXT,
+       DATE INTEGER PRIMARY KEY,
        EXT_TEMP INTEGER,
        BARO_TEMP INTEGER,
        ONBOARD_TEMP INTEGER,
@@ -14,8 +13,7 @@ CREATE TABLE AmbientValues(
        HUMINITY INTEGER);
 
 INSERT INTO AmbientValues VALUES(
-       1,
-       'So 6. Jun 12:00:00 CEST 2021',
+       1623141708,
        20,
        21,
        22,
