@@ -4,8 +4,7 @@ BEGIN TRANSACTION;
 DROP TABLE IF EXISTS AmbientValues;
 
 CREATE TABLE AmbientValues(
-       Id INTEGER PRIMARY KEY,
-       Date TEXT,
+       DATE INTEGER PRIMARY KEY,
        EXT_TEMP INTEGER,
        BARO_TEMP INTEGER,
        ONBOARD_TEMP INTEGER,
